unpackaged/main/default/objects/Revision__c/fields/Revision_Length__c.field-meta.xml
<CustomField>
    <fullName>Revision_Length__c</fullName>
    <label>Handling Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>