unpackaged/main/default/objects/Revision__c/fields/Revision_Owner__c.field-meta.xml
<CustomField>
    <fullName>Revision_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revision Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>