unpackaged/main/default/objects/Revision__c/fields/Revision_Round__c.field-meta.xml
<CustomField>
    <fullName>Revision_Round__c</fullName>
    <label>Revision Round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>