unpackaged/main/default/objects/Revision__c/fields/Revision_Score__c.field-meta.xml
<CustomField>
    <fullName>Revision_Score__c</fullName>
    <inlineHelpText>How easy was the revision?</inlineHelpText>
    <label>Revision Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>