unpackaged/main/default/objects/Revision__c/fields/Revision_submission_form__c.field-meta.xml
<CustomField>
    <fullName>Revision_submission_form__c</fullName>
    <label>Revision submission form</label>
    <type>Url</type>
</CustomField>