unpackaged/main/default/objects/Revision__c/fields/Revision_Type__c.field-meta.xml
<CustomField>
    <fullName>Revision_Type__c</fullName>
    <label>Revision Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jotform</fullName>
            </value>
            <value>
                <fullName>Google Doc - Short</fullName>
            </value>
            <value>
                <fullName>Google Doc - Medium</fullName>
            </value>
            <value>
                <fullName>Google Doc - Long</fullName>
            </value>
            <value>
                <fullName>Lightning Pod</fullName>
            </value>
            <value>
                <fullName>Xpress Checkout</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
            </value>
            <value>
                <fullName>Pages of Copywriting</fullName>
            </value>
            <value>
                <fullName>QA Passback</fullName>
            </value>
            <value>
                <fullName>Video Creation</fullName>
            </value>
            <value>
                <fullName>Video Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>