unpackaged/main/default/objects/Revision__c/fields/Revisions_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Revisions_Document_Link__c</fullName>
    <label>Revisions Document Link</label>
    <type>Url</type>
</CustomField>