unpackaged/main/default/objects/Revision__c/fields/Revisions_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Revisions_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>