unpackaged/main/default/objects/Revision__c/fields/Revisions_Pod__c.field-meta.xml
<CustomField>
    <fullName>Revisions_Pod__c</fullName>
    <formula>text(   Service__r.Owner:User.Revisions_Pod__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revisions Pod</label>
    <type>Text</type>
</CustomField>