unpackaged/main/default/objects/Revision__c/fields/Revisions_Quiz__c.field-meta.xml
<CustomField>
    <fullName>Revisions_Quiz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisions Quiz</label>
    <type>Checkbox</type>
</CustomField>