unpackaged/main/default/objects/Revision__c/fields/Salesforce_URL__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_URL__c</fullName>
    <formula>&quot;https://luxurypresence.lightning.force.com/&quot;&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce URL</label>
    <type>Text</type>
</CustomField>