unpackaged/main/default/objects/Revision__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>References the scope of the revisions, this is used for marketing revisions record type</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Content_Revision_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Title / Subtitle Change</fullName>
            </value>
            <value>
                <fullName>Update CTA</fullName>
            </value>
            <value>
                <fullName>Track Changes</fullName>
            </value>
            <value>
                <fullName>Small-Scale Item Edits</fullName>
            </value>
            <value>
                <fullName>Photo Updates</fullName>
            </value>
            <value>
                <fullName>Spelling / Grammar</fullName>
            </value>
            <value>
                <fullName>Wrong Location</fullName>
            </value>
            <value>
                <fullName>Requesting New Topic</fullName>
            </value>
            <value>
                <fullName>Voice / Tone</fullName>
            </value>
            <value>
                <fullName>Large-Scale Item Edits</fullName>
            </value>
            <value>
                <fullName>Needs Research</fullName>
            </value>
            <value>
                <fullName>Outdated Info</fullName>
            </value>
            <value>
                <fullName>Restaurant or Shop Change</fullName>
            </value>
            <value>
                <fullName>Neighborhoods Change</fullName>
            </value>
            <value>
                <fullName>Structural Changes</fullName>
            </value>
            <value>
                <fullName>Info from Bad Source</fullName>
            </value>
            <value>
                <fullName>Adding Hyperlinks</fullName>
            </value>
            <value>
                <fullName>Additional Context Provided</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>