unpackaged/main/default/objects/Revision__c/fields/Service_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Service_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Schedule</label>
    <referenceTo>Service_schedule__c</referenceTo>
    <relationshipLabel>Revisions</relationshipLabel>
    <relationshipName>Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>