unpackaged/main/default/objects/Revision__c/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <label>Service Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>