unpackaged/main/default/objects/Revision__c/fields/Service_Status_PL__c.field-meta.xml
<CustomField>
    <fullName>Service_Status_PL__c</fullName>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Status</valueSetName>
    </valueSet>
</CustomField>