unpackaged/main/default/objects/Revision__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Revision</fullName>
            </value>
            <value>
                <fullName>Client Revision</fullName>
            </value>
            <value>
                <fullName>QA Passback</fullName>
            </value>
            <value>
                <fullName>Opening Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>