unpackaged/main/default/objects/Revision__c/fields/Staging_Link__c.field-meta.xml
<CustomField>
    <fullName>Staging_Link__c</fullName>
    <formula>Service__r.Staging_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staging Link</label>
    <type>Text</type>
</CustomField>