unpackaged/main/default/objects/Revision__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Shutterstock Pending</fullName>
            </value>
            <value>
                <fullName>Needs More Information</fullName>
            </value>
            <value>
                <fullName>Edits Requested</fullName>
            </value>
            <value>
                <fullName>Pending Edits</fullName>
            </value>
            <value>
                <fullName>Ready for Upload</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Waiting on IM/AM</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Ready for QA</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Additional Revisions</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Approve to Upload</fullName>
                <label>Approved to Upload</label>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Additional Feedback</fullName>
                <isActive>false</isActive>
                <label>Additional Feedback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>