unpackaged/main/default/objects/Revision__c/fields/Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration__c</fullName>
    <label>Status Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>