unpackaged/main/default/objects/Revision__c/fields/Submited_for_approval_Stage_Time__c.field-meta.xml
<CustomField>
    <fullName>Submited_for_approval_Stage_Time__c</fullName>
    <formula>(
ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE( Submitted_for_Approval_End_Date__c  ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Submitted_for_Approval_End_Date__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD(Submitted_for_Approval_End_Date__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( Submitted_for_approval_date_time__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( Submitted_for_approval_date_time__c  ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( Submitted_for_approval_date_time__c  - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
)
)
),
0 )
)/8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted for Approval Stage Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>