unpackaged/main/default/objects/Revision__c/fields/Submitted_for_approval_date_time__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_approval_date_time__c</fullName>
    <label>Submitted for Approval Start Date</label>
    <type>DateTime</type>
</CustomField>