unpackaged/main/default/objects/Revision__c/fields/Submitted_for_Approval_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Approval_End_Date__c</fullName>
    <label>Submitted for Approval End Date</label>
    <type>DateTime</type>
</CustomField>