unpackaged/main/default/objects/Revision__c/fields/Take_2_Submission_URL__c.field-meta.xml
<CustomField>
    <fullName>Take_2_Submission_URL__c</fullName>
    <label>Take 2 Submission URL</label>
    <type>Url</type>
</CustomField>