unpackaged/main/default/objects/Revision__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <formula>Service__r.Design_Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template</label>
    <type>Text</type>
</CustomField>