unpackaged/main/default/objects/Revision__c/fields/Testimonial_Assets__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Assets__c</fullName>
    <label>Testimonial Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>