unpackaged/main/default/objects/Revision__c/fields/Tier_plan__c.field-meta.xml
<CustomField>
    <fullName>Tier_plan__c</fullName>
    <formula>TEXT( Service__r.Opportunity__r.Tier_Plan__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier plan</label>
    <type>Text</type>
</CustomField>