unpackaged/main/default/objects/Revision__c/fields/Total_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Turnaround_Time__c</fullName>
    <formula>Revision_Length_Formula__c +  Turnaround_Time_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Turnaround Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>