unpackaged/main/default/objects/Revision__c/fields/Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_Time__c</fullName>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>