unpackaged/main/default/objects/Revision__c/fields/Type_of_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Refresh__c</fullName>
    <label>Type of Refresh</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global Refresh</fullName>
            </value>
            <value>
                <fullName>Single/Two Page Refresh</fullName>
            </value>
            <value>
                <fullName>Imagery/Videography Refresh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>