unpackaged/main/default/objects/Revision__c/fields/VIP_Custom_Pod__c.field-meta.xml
<CustomField>
    <fullName>VIP_Custom_Pod__c</fullName>
    <formula>Service__r.Owner:User.VIP_Custom_Offering__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Custom Pod</label>
    <type>Checkbox</type>
</CustomField>