unpackaged/main/default/objects/Revision__c/fields/VIP_Custom_Service__c.field-meta.xml
<CustomField>
    <fullName>VIP_Custom_Service__c</fullName>
    <formula>IF( OR( Service__r.Semi_Custom_Pod__c = TRUE, Service__r.VIP__c = TRUE), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP/ Custom Service</label>
    <type>Checkbox</type>
</CustomField>