unpackaged/main/default/objects/Revision__c/fields/VIP_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>VIP_Service_Status__c</fullName>
    <formula>TEXT( Service__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Service Status</label>
    <type>Text</type>
</CustomField>