unpackaged/main/default/objects/Revision__c/fields/WB_Pod__c.field-meta.xml
<CustomField>
    <fullName>WB_Pod__c</fullName>
    <formula>TEXT( Website_builder__r.Revisions_Pod__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WB Pod</label>
    <type>Text</type>
</CustomField>