unpackaged/main/default/objects/Revision__c/fields/WB_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>WB_Quality_Score__c</fullName>
    <formula>CASE(WB_Quality__c , &quot;0&quot;, 0, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3,&quot;4&quot; , 4, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Assigns a numerical value to WB Quality Score</inlineHelpText>
    <label>WB Quality Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>