unpackaged/main/default/objects/Revision__c/fields/Website_builder__c.field-meta.xml
<CustomField>
    <fullName>Website_builder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Website builder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revisions1</relationshipName>
    <type>Lookup</type>
</CustomField>