unpackaged/main/default/objects/Revision__c/fields/Writers_Notes__c.field-meta.xml
<CustomField>
    <fullName>Writers_Notes__c</fullName>
    <formula>Service_Schedule__r.Writer_s_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Writers Notes</label>
    <type>Checkbox</type>
</CustomField>