unpackaged/main/default/objects/Revision__c/recordTypes/Custom_Website.recordType-meta.xml
<RecordType>
    <fullName>Custom_Website</fullName>
    <active>true</active>
    <label>Custom Website</label>
</RecordType>