unpackaged/main/default/objects/Revision__c/recordTypes/Design_Refresh.recordType-meta.xml
<RecordType>
    <fullName>Design_Refresh</fullName>
    <active>true</active>
    <label>Design Refresh</label>
</RecordType>