unpackaged/main/default/objects/Revision__c/recordTypes/Live_Client_Design_Revision.recordType-meta.xml
<RecordType>
    <fullName>Live_Client_Design_Revision</fullName>
    <active>true</active>
    <label>Live Client Design Revision</label>
</RecordType>