unpackaged/main/default/objects/Revision__c/recordTypes/Migration.recordType-meta.xml
<RecordType>
    <fullName>Migration</fullName>
    <active>true</active>
    <label>Migration</label>
</RecordType>