unpackaged/main/default/objects/Revision__c/recordTypes/Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Onboarding</fullName>
    <active>true</active>
    <label>Onboarding</label>
</RecordType>