unpackaged/main/default/objects/Revision__c/recordTypes/Onboarding_inactive.recordType-meta.xml
<RecordType>
    <fullName>Onboarding_inactive</fullName>
    <active>false</active>
    <label>Onboarding inactive</label>
</RecordType>