unpackaged/main/default/objects/Revision__c/recordTypes/Opening_Video.recordType-meta.xml
<RecordType>
    <fullName>Opening_Video</fullName>
    <active>true</active>
    <label>Opening Video</label>
</RecordType>