unpackaged/main/default/objects/Revision__c/recordTypes/QA_Passback.recordType-meta.xml
<RecordType>
    <fullName>QA_Passback</fullName>
    <active>true</active>
    <label>QA Passback</label>
</RecordType>