unpackaged/main/default/objects/Revision__c/recordTypes/Take_2.recordType-meta.xml
<RecordType>
    <fullName>Take_2</fullName>
    <active>true</active>
    <label>Take 2</label>
</RecordType>