unpackaged/main/default/objects/Revision__c/validationRules/Content_Revision_Scope.validationRule-meta.xml
<ValidationRule>
    <fullName>Content_Revision_Scope</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Done&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Done&quot;)),
$Profile.Name = &quot;Content&quot;,
ISPICKVAL(Scope__c,&quot;&quot; ),
RecordType.Name = &quot;Marketing&quot;

)</errorConditionFormula>
    <errorMessage>Please add a scope before moving revision status to &quot;Done&quot;</errorMessage>
</ValidationRule>