unpackaged/main/default/objects/Revision__c/validationRules/IDX_required.validationRule-meta.xml
<ValidationRule>
    <fullName>IDX_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( IDX_Task_Required__c , &#39;&#39;), 
NOT( RecordType.Name = &quot;Design_Refresh&quot; ), 
ISPICKVAL(Source__c , &#39;Internal Revision&#39;))</errorConditionFormula>
    <errorDisplayField>IDX_Task_Required__c</errorDisplayField>
    <errorMessage>Please specify if an IDX task is required for this revision.</errorMessage>
</ValidationRule>