unpackaged/main/default/objects/Revision__c/validationRules/Only_QA_can_complete_revision.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_QA_can_complete_revision</fullName>
    <active>false</active>
    <description>Restrict so that only QA can change Revision to status = Done.</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( Revision_Owner__r.Contact.Position__c ,&quot;QA&quot;)),
ISPICKVAL( Status__c , &quot;Done&quot;))</errorConditionFormula>
    <errorMessage>Only QA can change Revision to status = Done.</errorMessage>
</ValidationRule>