unpackaged/main/default/objects/Revision__c/validationRules/Owner_QA_Status_QA.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_QA_Status_QA</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
ISPICKVAL( Status__c , &#39;QA&#39;), 
NOT (ISPICKVAL( Revision_Owner__r.Contact.Position__c , &#39;QA&#39;))

)</errorConditionFormula>
    <errorDisplayField>Revision_Owner__c</errorDisplayField>
    <errorMessage>Please reassign the Revision to the QA.</errorMessage>
</ValidationRule>