unpackaged/main/default/objects/Revision__c/validationRules/Revision_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Revision_Owner</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Revision_Owner__c )</errorConditionFormula>
    <errorDisplayField>Revision_Owner__c</errorDisplayField>
    <errorMessage>Please assign the revision.</errorMessage>
</ValidationRule>