unpackaged/main/default/objects/Revision__c/validationRules/Validate_Service_Status_Upon_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Service_Status_Upon_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()
&amp;&amp;
RecordType.DeveloperName = &#39;Onboarding&#39;
&amp;&amp;
ISPICKVAL(Source__c,&#39;Client Revision&#39;)
&amp;&amp;
NOT(ISPICKVAL(Service__r.Status__c, &#39;Client Revision&#39;))</errorConditionFormula>
    <errorMessage>Please, move the service status to Revision Round before creating a new revision</errorMessage>
</ValidationRule>