unpackaged/main/default/objects/Revision__c/listViews/Agent_Subdomains.listView-meta.xml
<ListView>
    <fullName>Agent_Subdomains</fullName>
    <columns>NAME</columns>
    <columns>Revisions_Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Website_builder__c</columns>
    <columns>Data_specialist__c</columns>
    <columns>Revisions_Document_Link__c</columns>
    <columns>Implementation_Manager__c</columns>
    <columns>Revision_Round__c</columns>
    <columns>Revision_Type__c</columns>
    <columns>Staging_Link__c</columns>
    <columns>Community_URL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Design_template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In progress,Ready for QA,QA,Additional Revisions,Submitted for Approval</value>
    </filters>
    <filters>
        <field>Agent_Subdomain__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Agent Subdomains</label>
</ListView>