unpackaged/main/default/objects/Revision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Revisions_Due_Date__c</columns>
    <columns>Revisions_Pod__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Implementation_Manager__c</columns>
    <columns>Revision_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>