unpackaged/main/default/objects/Revision__c/listViews/Content_Revisions_Audit.listView-meta.xml
<ListView>
    <fullName>Content_Revisions_Audit</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Revisions_Due_Date__c</columns>
    <columns>Revisions_Pod__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Implementation_Manager__c</columns>
    <columns>Revision_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Revision__c.Marketing</value>
    </filters>
    <label>Content Revisions Audit</label>
</ListView>