unpackaged/main/default/objects/Revision__c/listViews/Copy_of_Pod_1_I_Emily1.listView-meta.xml
<ListView>
    <fullName>Copy_of_Pod_1_I_Emily1</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Revision_Round__c</columns>
    <columns>Revision_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Revisions_Due_Date__c</columns>
    <columns>Website_builder__c</columns>
    <columns>Data_specialist__c</columns>
    <columns>Implementation_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Revision__c.Onboarding</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In progress,Ready for QA,QA,Additional Revisions,Submitted for Approval</value>
    </filters>
    <filters>
        <field>Revision_Type__c</field>
        <operation>equals</operation>
        <value>Jotform,Google Doc - Short,Google Doc - Medium,Google Doc - Long,Lightning Pod,Xpress Checkout</value>
    </filters>
    <filters>
        <field>Revisions_Pod__c</field>
        <operation>equals</operation>
        <value>VIP Pod</value>
    </filters>
    <filters>
        <field>VIP__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>VIP | Emma</label>
</ListView>