unpackaged/main/default/objects/Revision__c/listViews/Design_Refresh_Onboarding.listView-meta.xml
<ListView>
    <fullName>Design_Refresh_Onboarding</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Revisions_Due_Date__c</columns>
    <columns>Implementation_Manager__c</columns>
    <columns>Revision_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Revision__c.Design_Refresh</value>
    </filters>
    <label>Design Refresh</label>
</ListView>